--- a/chronus-demo/chronus-dubbo-demo/src/main/resources/application.properties
+++ b/chronus-demo/chronus-dubbo-demo/src/main/resources/application.properties
@@ -11,6 +11,6 @@ dubbo.application.organization=360
 dubbo.protocol.name=dubbo
 dubbo.protocol.host=
 dubbo.protocol.port=-1
-dubbo.registry.address=zookeeper://zk.360haojie.loan:2181
+dubbo.registry.address=zookeeper://127.0.0.1:2181
 
 logging.config=classpath:logging/log4j2-dev.xml
