--- a/chronus-sdk/chronus-sdk-api/pom.xml
+++ b/chronus-sdk/chronus-sdk-api/pom.xml
@@ -32,6 +32,20 @@
             <artifactId>slf4j-api</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <!-- <scope>provided</scope>-->
+        </dependency>
+
     </dependencies>
 
     <build>
